a user can now connect
add login form and rest api login

--- a/src/main/webapp/detail.html
+++ b/src/main/webapp/detail.html
@@ -90,9 +90,9 @@
 	        <a href="/movie.manager/" class="menu-item">Accueil</a>
 	        <a href="/movie.manager/list_movie.html" class="menu-item active">Liste des Films</a>
 	        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
-	        <a href="#" class="menu-item">Se Connecter</a>
+	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
 	        <a href="#" class="menu-item">S'Inscrire</a>
-	    </div>
+    </div>
 	     <h1>Détail d'un film</h1>
 	<div class="back-button">
 	    <a href="#" onclick="history.back()">Retour</a>
