--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,11 +37,11 @@
 </head>
 <body>
     <div class="menu">
-        <a href="/movie.manager/" class="menu-item active">Accueil</a>
-        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
-        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
-        <a href="#" class="menu-item">Se Connecter</a>
-        <a href="#" class="menu-item">S'Inscrire</a>
+	        <a href="/movie.manager/" class="menu-item active">Accueil</a>
+	        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
+	        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
+	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
+	        <a href="#" class="menu-item">S'Inscrire</a>
     </div>
 </body>
 </html>
