--- a/src/main/webapp/create_movie.html
+++ b/src/main/webapp/create_movie.html
@@ -78,13 +78,13 @@
     </style>
 </head>
 <body>
-    <div class="menu">
-        <a href="/movie.manager/" class="menu-item">Accueil</a>
-        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
-        <a href="/movie.manager/create_movie.html" class="menu-item active">Ajouter un Film</a>
-        <a href="#" class="menu-item">Se Connecter</a>
-        <a href="#" class="menu-item">S'Inscrire</a>
-    </div>
+   <div class="menu">
+	        <a href="/movie.manager/" class="menu-item">Accueil</a>
+	        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
+	        <a href="/movie.manager/create_movie.html" class="menu-item active">Ajouter un Film</a>
+	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
+	        <a href="#" class="menu-item">S'Inscrire</a>
+    </div>	
 
     <div class="form-container">
     <h2>Ajouter un Film</h2>
