--- a/src/main/webapp/login_form.html
+++ b/src/main/webapp/login_form.html
@@ -121,9 +121,11 @@
         fetch("rest/users/login", {
             method: "POST",
             headers: {
-                "Content-Type": "application/x-www-form-urlencoded"
+                "Content-Type": "application/x-www-form-urlencoded",
+                'Accept': '*/*',
             },
-            body: "username=" + encodeURIComponent(username) + "&password=" + encodeURIComponent(password)
+            body: "username=" + encodeURIComponent(username) + "&password=" + encodeURIComponent(password),
+            credentials: 'include' // include cookies in the request
         })
         .then(response => {
             if (response.ok) {
