--- a/src/main/webapp/create_movie.html
+++ b/src/main/webapp/create_movie.html
@@ -75,6 +75,20 @@
         .form-row input[type="submit"]:hover {
             background-color: #0056b3;
         }
+        
+         .hidden {
+            display: none;
+        }
+        
+       .error {
+            background-color: #ffcccc;
+            color: #cc0000;
+            padding: 10px;
+            border-radius: 5px;
+            margin: 0 auto 20px;
+            width: fit-content;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -86,7 +100,7 @@
 	        <a href="#" class="menu-item">S'Inscrire</a>
     </div>	
 
-    <div class="form-container">
+    <div id="addMovieForm" class="form-container">
     <h2>Ajouter un Film</h2>
     <form action="../movie.manager/rest/movies" method="POST">
         <div class="form-row">
@@ -134,5 +148,29 @@
         </div>
     </form>
 </div>
+<div id="errorMessage" class="error hidden"></div>
+
+<script>
+        // Fonction pour vérifier l'autorisation d'ajouter un film
+        function checkPermission() {
+            fetch("../movie.manager/rest/movies/canPostMovie")
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error("Vous n'avez pas les droits nécessaires pour accéder à cette page.");
+                    }
+                })
+                .catch(error => {
+                	 // Affichage de l'erreur
+                    const errorMessage = document.getElementById('errorMessage');
+                    errorMessage.textContent = error.message;
+                    errorMessage.classList.remove('hidden');
+                    // Cacher le formulaire
+                    document.getElementById('addMovieForm').classList.add('hidden');
+                });
+        }
+
+        // Appel de la fonction au chargement de la page
+        window.addEventListener('load', checkPermission);
+    </script>
 </body>
 </html>
