is_connected and disconnect
menu dynamically change if user is connected or not

menu is now in one place, removing duplication

--- a/src/main/webapp/create_movie.html
+++ b/src/main/webapp/create_movie.html
@@ -93,11 +93,7 @@
 </head>
 <body>
    <div class="menu">
-	        <a href="/movie.manager/" class="menu-item">Accueil</a>
-	        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
-	        <a href="/movie.manager/create_movie.html" class="menu-item active">Ajouter un Film</a>
-	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
-	        <a href="#" class="menu-item">S'Inscrire</a>
+	       
     </div>	
 
     <div id="addMovieForm" class="form-container">
@@ -172,5 +168,6 @@
         // Appel de la fonction au chargement de la page
         window.addEventListener('load', checkPermission);
     </script>
+    <script src="index.js"></script>
 </body>
 </html>
