--- a/src/main/webapp/list_movie.html
+++ b/src/main/webapp/list_movie.html
@@ -79,11 +79,7 @@
 </head>
 <body>
 	<div class="menu">
-	        <a href="/movie.manager/" class="menu-item">Accueil</a>
-	        <a href="/movie.manager/list_movie.html" class="menu-item active">Liste des Films</a>
-	        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
-	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
-	        <a href="#" class="menu-item">S'Inscrire</a>
+	        
     </div>
     <h1>Liste de Films</h1>
     
@@ -184,5 +180,6 @@
             filterMovies();
         });
     </script>
+    <script src="index.js"></script>
 </body>
 </html>
