--- a/src/main/webapp/detail.html
+++ b/src/main/webapp/detail.html
@@ -87,11 +87,7 @@
 </head>
 <body>
 	<div class="menu">
-	        <a href="/movie.manager/" class="menu-item">Accueil</a>
-	        <a href="/movie.manager/list_movie.html" class="menu-item active">Liste des Films</a>
-	        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
-	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
-	        <a href="#" class="menu-item">S'Inscrire</a>
+	        
     </div>
 	     <h1>Détail d'un film</h1>
 	<div class="back-button">
@@ -151,6 +147,6 @@
 	
 	    fetchMovieDetails(movieId);
 	</script>
-
+	<script src="index.js"></script>
 </body>
 </html>
