--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,12 +36,9 @@
     </style>
 </head>
 <body>
-    <div class="menu">
-	        <a href="/movie.manager/" class="menu-item active">Accueil</a>
-	        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
-	        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
-	        <a href="/movie.manager/login_form.html" class="menu-item">Se Connecter</a>
-	        <a href="#" class="menu-item">S'Inscrire</a>
+    <div id="menu" class="menu">
+	        
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
