--- a/src/main/webapp/login_form.html
+++ b/src/main/webapp/login_form.html
@@ -91,11 +91,7 @@
 <body>
 
 <div class="menu">
-	        <a href="/movie.manager/" class="menu-item">Accueil</a>
-	        <a href="/movie.manager/list_movie.html" class="menu-item">Liste des Films</a>
-	        <a href="/movie.manager/create_movie.html" class="menu-item">Ajouter un Film</a>
-	        <a href="/movie.manager/login_form.html" class="menu-item active">Se Connecter</a>
-	        <a href="#" class="menu-item">S'Inscrire</a>
+	        
     </div>
 <div class="container">
     <h2>Connexion</h2>
@@ -140,5 +136,6 @@
         });
     });
 </script>
+<script src="index.js"></script>
 </body>
 </html>
