--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,8 +37,10 @@
 </head>
 <body>
     <div id="menu" class="menu">
-	        
     </div>
+    <h1> Bienvenue.</h1>
+	        
+	        <p> Explorer dès à présent l'application grâce au menu en haut</p>
     <script src="index.js"></script>
 </body>
 </html>
